# cerise-interpreter

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  dune-project  flake.nix  make_run.sh  pr.txt  run_bank_example.sh
.github/workflows/: build.yml
lib/: ast.ml  call.ml  cli_parser.ml  compiler.ml  convert.ml  dune  encode.ml  extract.ml  infinite_z.ml  interactive_ui.ml  interpreter_ui.ml  ir.ml  ir_wasm.ml  irreg.ml  lexer.mll  lexer_regfile.mll  lexer_wasm.mll  machine.ml  parameters.ml  parser.mly  parser_regfile.mly  parser_wasm.mly  pretty_printer.ml  program.ml  scall_dcap.ml  scall_ucap.ml
lib/attic/: awkward_dcaps.ml  call.ml  scall_dcap.ml  scall_ucap.ml
lib/compiler/: compiler.ml  convert.ml  convert.mli  dune  extract.ml
lib/machine/: ast.ml  dune  encode.ml  ir.ml  ir_linkable_object.ml  irreg.ml  lexer.mll  lexer_linkable_object.mll  lexer_regfile.mll  machine.ml  parameters.ml  parser.mly  parser_linkable_object.mly  parser_regfile.mly  pretty_printer.ml  program.ml
lib/misc/: dune  infinite_z.ml  utils.ml
lib/ui/: cli_parser.ml  dune  interactive_ui.ml  interpreter_ui.ml
lib/wasm/: dune  ir_wasm.ml  lexer_wasm.mll  parser_wasm.mly
src/: awkward_dcaps.ml  awkward_ucaps.ml  compile.ml  compile_adv.ml  compile_bank.ml  dune  interactive.ml  interpreter.ml
tests/: dune  test.ml  tester.ml  tests.ml
tests/test_files/: l.reg
tests/test_files/case_studies/: mutually_distrustful.reg  (+1 more)
wat-toys/: incr.wat
wat-toys/bank/: client.wat  env.wat
wat-toys/bank_unsafe/: client.wat  env.wat
wat-toys/stack/: client.wat  stack.wat
(+64 files in other folders)
