(executable
 (name        interpreter)
 (modules     interpreter)
 (libraries   libinterp))

(executable
 (name        compile)
 (modules     compile)
 (libraries   libinterp))

(executable
 (name        compile_adv)
 (modules     compile_adv)
 (libraries   libinterp))
(executable
 (name        compile_bank)
 (modules     compile_bank)
 (libraries   libinterp))

(executable
 (name      interactive)
 (modules   interactive)
 (libraries libinterp notty notty.unix containers))

(executable
 (name      awkward_ucaps)
 (modules   awkward_ucaps)
 (libraries libinterp))

(executable
 (name      awkward_dcaps)
 (modules   awkward_dcaps)
 (libraries libinterp))
